--- a/src/main/resources/theme/chat/emoticons/emoticons_group.fxml
+++ b/src/main/resources/theme/chat/emoticons/emoticons_group.fxml
@@ -11,7 +11,7 @@
 
 <VBox fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
       prefWidth="410.0" spacing="10.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.faforever.client.chat.EmoticonsGroupController">
+      fx:controller="com.faforever.client.chat.emoticons.EmoticonsGroupController">
     <children>
         <HBox alignment="CENTER_LEFT" spacing="10.0">
             <children>
