--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -725,9 +725,26 @@
 
 .axis {
   -fx-tick-label-font-size: 1em;
+  -fx-font-size: 1.2em;
 }
 
 .default-color0.chart-bar:highlighted-bar {
+  -fx-bar-fill: HIGHLIGHT_COLOR;
+}
+
+.default-color1.chart-bar:highlighted-bar {
+  -fx-bar-fill: HIGHLIGHT_COLOR;
+}
+
+.default-color2.chart-bar:highlighted-bar {
+  -fx-bar-fill: HIGHLIGHT_COLOR;
+}
+
+.default-color3.chart-bar:highlighted-bar {
+  -fx-bar-fill: HIGHLIGHT_COLOR;
+}
+
+.default-color4.chart-bar:highlighted-bar {
   -fx-bar-fill: HIGHLIGHT_COLOR;
 }
 
@@ -738,6 +755,128 @@
   -fx-padding: 1em;
   -fx-graphic-text-gap: 1em;
 }
+
+/***************** League leaderboard *****************/
+
+.score-arc {
+  -fx-fill: transparent;
+  -fx-stroke-width: 20;
+  -fx-stroke: CHART_COLOR_3;
+}
+
+.score-circle {
+  -fx-fill: transparent;
+  -fx-stroke-width: 20;
+  -fx-stroke: #1e1e1e;
+}
+
+.score {
+  -fx-font-size: 60px;
+  -fx-font-weight: 700;
+  -fx-text-fill: -fx-text-color;
+}
+
+.heading {
+  -fx-font-size: 28px;
+  -fx-padding: -9 0;
+  -fx-text-fill: #5f5f5f;
+  -fx-font-family: 'Source Sans Pro Semibold';
+}
+
+.search {
+  -fx-font-size: 12px;
+  -fx-text-fill: -fx-text-color;
+  -fx-font-family: 'Source Sans Pro';
+}
+
+.season {
+  -fx-text-fill: #e0e0e0;
+  -fx-font-family: 'Source Sans Pro Semibold';
+  -fx-font-size: 30px;
+}
+
+.seasonDate {
+  -fx-text-fill: #777;
+  -fx-font-family: 'Source Sans Pro Semibold';
+  -fx-font-size: 20px;
+}
+
+.division-selector {
+  -fx-border-width: 0;
+  -fx-font-size: 20px;
+  -fx-background-color: #1e1e1e;
+  -fx-background-radius: 10;
+  -fx-font-family: 'Source Sans Pro Semibold';
+}
+
+.subDivisionTabPane {
+  -fx-font-family: 'Source Sans Pro Semibold';
+  -fx-font-size: 14px;
+}
+
+.subDivisionTabPane .tab-down-button {
+  -fx-padding: 0;
+}
+
+.subDivisionTabPane .tab-down-button .arrow {
+  -fx-padding: 0;
+}
+
+.subDivisionTabPane > .tab-header-area {
+  -fx-background-color: transparent;
+  -fx-background: #FFFFFF12;
+  -fx-padding: 0 0 0 10;
+  -fx-border-width: 0 0 2 0;
+  -fx-border-color: -fx-accent;
+  -fx-font-size: 18px;
+}
+
+.subDivisionTabPane > .tab-header-area > .headers-region > .tab {
+  -fx-background-insets: 0;
+  -fx-border-insets: 0;
+}
+
+.division-table .filler,
+.division-table .column-header {
+  -fx-font-size: 16px;
+  -fx-size: 2.2em;
+}
+
+
+.division-table .table-row-cell {
+  -fx-font-family: 'Source Sans Pro';
+  -fx-font-size: 16px;
+}
+
+.division-table .table-cell {
+  -fx-padding: 0 0 0 15;
+}
+
+.division-table .table-row-cell,
+.division-table .tree-table-row-cell {
+  -fx-cell-size: 1.6em;
+}
+
+.leaderboardChart {
+  chart_color_1: #2b71d9;
+  chart_color_2: #2b71d9;
+  chart_color_3: #2b71d9;
+  chart_color_4: #2b71d9;
+  chart_color_5: #2b71d9;
+}
+
+/***************** Match maker *****************/
+
+.player-card {
+  -fx-background-color: #1e1e1e;
+  -fx-border-color: #636363;
+  -fx-background-radius: 9;
+  -fx-border-radius: 9;
+  -fx-border-width: 1;
+  -fx-font-family: 'Source Sans Pro';
+  -fx-font-size: 14px;
+}
+
 
 /***************** Match maker *****************/
 
